# DwellProof

./: .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  RIGHTS.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TODO.md
core/: README.md  __init__.py  cashflow.py  contracts.py  loan.py  readiness.py  tax.py
desktop/: README.md  build_macos.sh
docs/: ARCHITECTURE.md  AUDIT-2026-07-12.md  MILESTONE-2026-07-12.md  MILESTONE-2026-07-13.md  NEXT-SESSION.md  PROGRESS.md
knowledge-gems/: 06-房产投资决策框架.md  README.md
legacy/: 70city_expanded.csv  70city_full.csv  70city_new_house.csv  ALERT_REPORT.md  API_DOCUMENTATION.md  ARCHITECTURE.md  BACKTEST_REPORT.md  BEIJING_DISTRICTS.md  BUYER_GUIDE.md  CALCULATOR_TOOLS.md  CHANGCHUN_MULTI_DECISION_TREE.md  CHANGCHUN_SELL_STRATEGY.md  CHANGELOG.md  CHENGDU_DISTRICTS.md  CHINA_JAPAN_COMPARISON.md  CITY_SUMMARY_TABLE.md  CITY_TRANSMISSION_MODEL.md  COMPONENT_GUIDE.md  CREDIT_ANALYSIS.md  CYCLE_FEATURES.md  CYCLE_PREDICTION_MODEL.md  DASHBOARD_10CITY.html  DECISION_REPORT.md  DEEP_AUDIT.md  DEPLOYMENT_GUIDE.md  DIGITAL_REMOTE_METAVERSE.md  ECONOMY_GBA.md  EDUCATION_MEDICAL_TRANSPORT.md  ENERGY_CARBON_GREEN.md  EXECUTIVE_SUMMARY.md  FINAL_REPORT_v2.md  FINAL_SUMMARY.md  FINANCIAL_RISK_BANK.md  FULL_CATALOG.md  FULL_CITY_RANKING.md  (+144 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/reasonix/: acp.rs  audit.rs  credentials.rs  home.rs  manifest.rs  mod.rs  policy.rs
(+40 files in other folders)
