[package]
name = "dwellproof-desktop"
version = "0.1.0"
description = "DwellProof local evidence workbench desktop shell"
authors = ["eric-stone-plus", "Codex (OpenAI)"]
edition = "2021"
license = "MIT"

[lib]
name = "dwellproof_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
